New api (#15)
* Working test framework

* Switch logging to bunyan, add test config, http test framework

* Switch to using rethinkdbdash

* Complete switch to rethinkdbdash

* Add all deps

* Refactored code layout

* Basic test framework

* Add redis to circle.yml deps

* Add rethinkdb

* Fix test
