# lib/db.js
@@ -1,138 +1,189 @@
-var r = require('rethinkdb');
 var async = require('async');
-var moment = require('moment');
+var config = require('./config');
+var rethinkdbdash = require('rethinkdbdash');
 var _ = require('lodash');
-
+var r;
 var api = module.exports = {};
 
-var rethinkHost = process.env.RETHINKDB_PROXY_SERVICE_HOST || process.env.RETHINKDB_SERVICE_HOST || 'localhost';
+api.name = 'db';
 
-var db = 'wayback';
-var table = 'captures';
-var options = {
-  host: rethinkHost,
-  db: 'wayback'
+var db = config.rethinkdb.db;
+var table = config.rethinkdb.table;
+
+api.status = 'uninitialized';
+
+var log;
+
+api.close = function (callback) {
+  log.info('Closing rethinkdb connection');
+  r.getPoolMaster().drain();
+  return callback();
 };
-var conn;
 
-api.getCaptures = function getCaptures(opts, callback) {
-  r.table(table)
-    .orderBy(r.desc('createdAt'))
-    .limit(100)
-    .run(conn, function(err, cursor) {
-      if (err) {
-        return callback(err);
-      }
-      cursor.toArray(function(err, result) {
-        if (err) {
-          return callback(err);
-        }
-        _.each(result, function(capture) {
-          capture.fromNow = moment(capture.createdAt).fromNow();
-        });
-        return callback(null, result);
-      });
-    })
-}
+api.init = function (app, callback) {
+  log = app.log.child({
+    module: api.name
+  });
 
-api.getCapture = function getCapture(opts, callback) {
-  r.table(table)
-    .get(opts['id'])
-    .run(conn, function(err, cursor) {
-      if (err) {
-        return callback(err);
-      }
-      return callback(null, cursor);
-    });
-}
-
-api.writeCapture = function writeCapture(data, callback) {
-  console.log('about to create data record for ', data);
-  r.table(table).insert(data).run(conn, callback);
-}
-
-api.init = function (callback) {
+  r = rethinkdbdash(config.rethinkdb);
+  r.getPoolMaster().on('log', function (message) {
+    log.info(message);
+  });
+  r.getPoolMaster().on('healthy', function (healthy) {
+    if (healthy === true) {
+      api.status = 'HEALTHY';
+      log.info('Rethinkdb pool is healthy');
+    } else {
+      api.status = 'UNHEALTHY';
+      log.warn('Rethinkdb pool is unhealthy');
+    }
+  });
   async.waterfall([
-    function(callback) {
-      r.connect(options, function (err, c) {
-        if (err) {
-          console.log(err);
-          return callback(err);
-        }
-        conn = c;
-        return callback();
-      });
-    },
-    function(callback) {
-      r.dbList().contains(db)
-        .do(function(databaseExists) {
+    function (callback) {
+      r.dbList()
+        .contains(db)
+        .do(function (databaseExists) {
           return r.branch(
             databaseExists,
             { dbs_created: 0 },
             r.dbCreate(db)
           );
-        }).run(conn, function (err, res) {
-          if (err) {
-            return callback(err);
-          }
-          conn.use(db);
-          console.log('using wayback db');
+        })
+        .run()
+        .then(function () {
+          log.info('Database exists');
           return callback();
-        });
+        })
+        .error(callback);
     },
-    function(callback) {
-      r.tableList().contains(table)
-        .do(function(tableExists) {
+    function (callback) {
+      r.tableList()
+        .contains(table)
+        .do(function (tableExists) {
           return r.branch(
             tableExists,
             { tables_created: 0 },
             r.tableCreate(table)
           );
-        }).run(conn, function (err, res) {
-          if (err) {
-            return callback(err);
-          }
-          console.log('captures table exists');
+        })
+        .run()
+        .then(function () {
+          log.info('captures table exists');
           return callback();
-        });
+        })
+        .error(callback);
     },
-    function(callback) {
-      r.table(table).indexList().contains('domain')
-        .do(function(indexExists) {
+    function (callback) {
+      r.table(table)
+        .indexList()
+        .contains('domain')
+        .do(function (indexExists) {
           return r.branch(
             indexExists,
             { indexes_created: 0 },
             r.table(table).indexCreate('domain')
           );
-        }).run(conn, function (err, res) {
-          if (err) {
-            return callback(err);
-          }
-          console.log('domain index exists');
+        })
+        .run()
+        .then(function () {
+          log.info('domain index exists');
           return callback();
-        });
+        })
+        .error(callback);
     },
-    function(callback) {
-      r.table(table).indexList().contains('createdAt')
-        .do(function(indexExists) {
+    function (callback) {
+      r.table(table)
+        .indexList()
+        .contains('createdAt')
+        .do(function (indexExists) {
           return r.branch(
             indexExists,
             { indexes_created: 0 },
             r.table(table).indexCreate('createdAt')
           );
-        }).run(conn, function (err, res) {
-          if (err) {
-            return callback(err);
-          }
-          console.log('createdAt index exists');
+        })
+        .run()
+        .then(function () {
+          log.info('createdAt index exists');
           return callback();
-        });
+        })
+        .error(callback);
     }
   ], function (err) {
     if (err) {
       return callback(err);
     }
-    console.log('Database connection up and running');
+    api.status = 'HEALTHY';
+    log.info('Database connection up and running');
     return callback();
-  })
-}
+  });
+};
+
+api.getSnapshots = function getSnapshots (opts, callback) {
+  r.table(table)
+    .orderBy(r.desc('createdAt'))
+    .limit(10)
+    .run()
+    .then(function (results) {
+      return callback(null, results);
+    })
+    .error(callback);
+};
+
+api.getSnapshot = function getSnapshot (id, callback) {
+  r.table(table)
+    .get(id)
+    .run()
+    .then(function (snapshot) {
+      return callback(null, snapshot);
+    })
+    .error(callback);
+};
+
+api.createSnapshot = function createSnapshot (data, callback) {
+  var keys = ['id', 'status', 'host', 'path', 'requestedUrl'];
+  var record = _.pick(data, keys);
+  record.createdAt = new Date();
+  record.updatedAt = record.createdAt;
+  log.info({
+    originalData: data,
+    record: record
+  }, 'about to create snapshot record');
+  r.table(table)
+    .insert(record)
+    .run()
+    .then(function onInsert () {
+      return callback(null, record);
+    })
+    .error(callback);
+};
+
+api.updateSnapshot = function updateSnapshot (data, callback) {
+  if (!data.id) {
+    log.error({
+      data: data
+    }, 'Unable to updateSnapshot, no id');
+    return callback(new Error('Unable to update snapshot, no id'));
+  }
+  var keys = ['status', 'originalImage', 'thumbnailImage'];
+  var record = _.pick(data, keys);
+  record.updatedAt = new Date();
+  log.info({
+    id: data.id,
+    data: data,
+    record: record
+  }, 'about to update screenshot record');
+  r.table(table)
+    .get(data.id)
+    .update(record)
+    .run()
+    .then(function () {
+      log.info({
+        id: data.id,
+        data: data,
+        record: record
+      }, 'Succesfully updated screenshot record');
+      return callback(null);
+    })
+    .error(callback);
+};
